--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: ubcmmhc-web
   profiles:
-    active: prod
+    active: ${APPLICATION_PROFILE}
   security:
     oauth2:
       client:
@@ -20,6 +20,9 @@ spring:
 
 brevo:
   api-key: ${BREVO_API_KEY}
+
+server:
+  forward-headers-strategy: framework
 
 logging:
   level:
